Image alignment fix for PIRATE-4677

--- a/bkb-dev.less
+++ b/bkb-dev.less
@@ -2923,7 +2923,6 @@ input:focus:-ms-input-placeholder {
 
         // Align Center
         .widget-align-center {
-            display: table;
             span {
                 &.image-title, &.image-description {
                     text-align: center;
