--- a/bkb.less
+++ b/bkb.less
@@ -2829,7 +2829,6 @@ input:focus:-ms-input-placeholder {
 
         // Align Center
         .widget-align-center {
-            display: table;
             span {
                 &.image-title, &.image-description {
                     text-align: center;
