--- a/extended/widgets/image.less
+++ b/extended/widgets/image.less
@@ -73,7 +73,6 @@
 
         // Align Center
         .widget-align-center {
-            display: table;
             span {
                 &.image-title, &.image-description {
                     text-align: center;
